fix: 更新 .gitignore 排除大文件
- 添加 node_modules、.next、.env 等到 .gitignore
- 解决 GitHub LFS 文件大小限制问题
- 排除 Prisma 开发数据库文件

--- a/.gitignore
+++ b/.gitignore
@@ -88,4 +88,20 @@ ci/*.pub
 .Trashes
 ehthumbs.db
 Thumbs.db
-/generated/prisma
+
+# Node.js
+node_modules/
+.next/
+/.next/
+/prisma/dev.db*
+/.env
+
+# Build outputs
+dist/
+build/
+out/
+*.tsbuildinfo
+
+# IDE
+.vscode/
+.idea/
